--- a/main.html
+++ b/main.html
@@ -25,14 +25,19 @@
     </div>
 
     <div id="controlPanel">
-        <p id="rotationPeriodDisplay">Sun/moon rotation period: 300 seconds</p>
-        <input type="range" min="10" max="300" value="30" id="rotationPeriodControl">
+        <P>Left click: Destroy blocks</P>
+        <P>Left click + Drag: Rotate</P>
+        <P>Right click + Drag: Pan</P>
+        <P>Scrool wheel: Zoom In/Out</P>
+        <P>Use slider to adjust sun/moon rotation period</P>
+        <p id="rotationPeriodDisplay">Current Value: 300 seconds</p>
+        <input type="range" min="10" max="300" value="30" id="rotationPeriodControl"> 
         <script>
             var slider = document.getElementById("rotationPeriodControl");
             var output = document.getElementById("rotationPeriodDisplay");
-            output.innerHTML = "Sun/moon rotation period: " + slider.value + " seconds";
+            output.innerHTML = "Current Value: " + slider.value + " seconds";
             slider.oninput = function() {
-                output.innerHTML = "Sun/moon rotation period: " + slider.value + " seconds";
+                output.innerHTML = "Current Value: " + slider.value + " seconds";
             }
         </script>
     </div>
